--- a/style.css
+++ b/style.css
@@ -238,6 +238,9 @@ nav li{
     font-size: 1.4rem; /* Scales down paragraph size */
     line-height: 2rem;
   }
+  .Imagelast{
+    display: none;
+  }
 }
 
 @media (min-width: 601px) {
@@ -281,7 +284,7 @@ main{
 /* Who are we Section */
 .whowe{
   background-color: #040706;
-  height: 60vh;
+  height: 70vh;
 }
 .whowe figure{
   display: flex;
@@ -305,6 +308,7 @@ main{
   color: #ffffff;
   margin-right: 4rem;
   margin-left: 4rem;
+  font-size: 1.2rem;
 }
 /* images Section */
 .images{
@@ -314,8 +318,58 @@ main{
   gap: 1rem;
   flex-wrap: wrap;
   padding-bottom: 2rem;
+  padding-top: 1rem;
 }
 .images img{
   width: 150px;
+  border-bottom: #ed9339 solid 3px;
+  border-right:  #ed9339 solid 3px;
+  border-radius: 1rem;
+}
+.contact{
+  padding-right: 10%;
+  padding-left: 10%;
+  padding-top: 10%;
+  color: white;
+  background-color: #040706;
+  height: 50vh;
+  text-align: center;
+}
+form{
+padding-top: 2rem;
+}
+form label {
+  padding: 12px 12px 12px 12px;
+  display: inline-block;
+}
+.contact h1{
+  font-size: 2rem;
+  text-decoration: underline;
+  margin: 0;
+}
+.submit{
+  background-color: #ed9339;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#subject{
+  margin-left: 0;
+}
+footer{
+  background-color: #ed9339;
+  text-align: center;
+  display: flex;
+}
+.map{
+  margin: 0;
+  padding: 0;
+}
+iframe{
+  width: 100%;
+  height: 20%;
+  filter: invert(100%);
 }
 
