--- a/style.css
+++ b/style.css
@@ -207,22 +207,43 @@ nav li{
 }
 
 .wedo h1 {
-  margin: 1rem 0;
   color: #ed9339;
-  font-size: 4rem;
 }
 
-.wedo p {
-  max-width: 80%; /* Prevents overly wide text */
-  margin: auto;
-  border: 2px solid #ed9339;
-  padding: 1rem;
-  border-radius: 0rem 2rem 2rem 2rem;
-  font-size: 1.6rem; /* Ensures readability on smaller screens */
-  line-height: 2.4rem;
-}
 
-/* Mobile responsiveness */
+@media (min-width: 601px){
+  .wedo h1{
+    font-size: 6rem;
+  }
+  .wedo p{
+    width: 50%;
+  }
+  .wedo p {
+    max-width: 80%; /* Prevents overly wide text */
+    margin: auto;
+    border: 2px solid #ed9339;
+    padding: 1rem;
+    border-radius: 0rem 2rem 2rem 2rem;
+    font-size: 1.6rem; /* Ensures readability on smaller screens */
+    line-height: 2.4rem;
+  }
+  .whowe{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  .whowe p{
+    width: 35%;
+    font-size: 1.4rem;
+    padding: 0;
+    margin-right: 0;
+    color: #ffffff;
+ 
+  }
+
+}
+  
 @media (max-width: 600px) {
   .wedo {
     min-height: 30vh; /* Adjusts height for smaller screens */
@@ -238,8 +259,27 @@ nav li{
     font-size: 1.4rem; /* Scales down paragraph size */
     line-height: 2rem;
   }
-  .Imagelast{
-    display: none;
+  .wedo p {
+    max-width: 80%; /* Prevents overly wide text */
+    margin: auto;
+    border: 2px solid #ed9339;
+    padding: 1rem;
+    border-radius: 0rem 2rem 2rem 2rem;
+    font-size: 1.6rem; /* Ensures readability on smaller screens */
+    line-height: 2.4rem;
+  }
+  .whowe p{
+    color: #ffffff;
+    margin-right: 4rem;
+    margin-left: 4rem;
+    font-size: 1.2rem;
+  }
+  .images img{
+    width: 150px;
+  }
+  .whowe{
+    background-color: #040706;
+    height: 80vh;
   }
 }
 
@@ -250,6 +290,20 @@ nav li{
       position: static;
       background-color: transparent;
       padding: 0;
+  }
+  .hero h1{
+    font-size: 5rem;
+    padding-bottom: 0;
+    margin-bottom: 0;
+  }
+  .hero p{
+    font-size: 3rem;
+    color: white;
+    padding-top: 0;
+    margin-bottom: 0;
+  }
+  .images img{
+    width: 300px;
   }
 }
 /* Hero section */
@@ -281,10 +335,11 @@ main{
   padding: 1rem;
   margin-top: 1rem;
 }
+
 /* Who are we Section */
 .whowe{
   background-color: #040706;
-  height: 50vh;
+  height: 40vh;
 }
 .whowe figure{
   display: flex;
@@ -304,24 +359,18 @@ main{
   padding: 0;
   padding-top: 5rem;
 }
-.whowe p{
-  color: #ffffff;
-  margin-right: 4rem;
-  margin-left: 4rem;
-  font-size: 1.2rem;
-}
+
 /* images Section */
 .images{
   background-color: #040706;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
-  flex-wrap: wrap;
   padding-bottom: 2rem;
   padding-top: 1rem;
 }
 .images img{
-  width: 150px;
   border-bottom: #ed9339 solid 3px;
   border-right:  #ed9339 solid 3px;
   border-radius: 1rem;
@@ -330,14 +379,15 @@ main{
 .contact{
   padding-right: 10%;
   padding-left: 10%;
-  padding-top: 10%;
+  padding-top: 5%;
   color: white;
   background-color: #040706;
-  height: 50vh;
+  height: 40vh;
   text-align: center;
 }
 form{
 padding-top: 2rem;
+padding-bottom: 0;
 }
 form label {
   padding: 12px 12px 12px 12px;
@@ -365,14 +415,7 @@ form label {
 footer{
   background-color: #ed9339;
 }
-.Map{
-  background-color: #040706;
-}
-iframe{
-  width: 100%;
-  height: 20%;
-  filter: invert(100%);
-}
+
 footer h1{
   font-size: 1.2rem;
   margin: 0;
@@ -382,10 +425,47 @@ footer{
   width: 100%;
   margin: auto;
 }
+@media (max: width 992px;) {
+  .Connect{
+    flex-direction: column;
+  }
+  iframe{
+    width: 100%;
+    height: 20%;
+    filter: invert(100%);
+  }
+}
+@media (max-width: 1200px){
+  .Footerstyle li{
+    list-style: none;
+    list-style: none;
+    padding: 1rem;
+    font-size: 1.4rem;
+    background-color: #87501a;
+    border-radius: 1rem;
+  }
+.Footerstyle ul{
+  display: flex;
+  text-align: center;
+  width: 80px;
+  font-weight: 500;
+  padding-left: 0;
+  color: white;
+  gap: 1rem;
+} 
+}
 @media (max-width: 600px) {
 footer img {
     width: 20px;
     padding: 0rem 2rem 0rem 2rem;
+  }
+  .Map{
+    background-color: #040706;
+  }
+  iframe{
+    width: 100%;
+    height: 20%;
+    filter: invert(100%);
   }
   .Footerstyle li{
     list-style: none;
@@ -403,8 +483,54 @@ footer img {
 
     color: white;
     gap: 1rem;
+  } 
+}
+.Fleximage{
+  width: 100rem;
+  margin: center;
+}
+.imagespart{
+  background-color: #040706;
+}
+@media(min-width: 992px){
+.Connect{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  background-color: #040706;
+  margin-right: 0;
+}
+.contact{
+  margin-right: 10rem;
+}
+
+}
+@media (min-width: 601px){
+  .images{
+    margin-left: 10%;
+    margin-right: 10%;
   }
-  
+  footer img {
+    width: 20px;
+    padding: 0rem 2rem 0rem 2rem;
+  }
+
+  .Connect{
+    margin: 0;
+    padding: 0;
+  }
+  .Map{
+    background-color: #040706;
+  }
+  iframe{
+    width: 100%;
+    height: 30rem;
+    filter: invert(100%);
+  }
+}
+@media (min-width: 1200px){
+
 }
 a{
   text-decoration: none;
