--- a/style.css
+++ b/style.css
@@ -149,8 +149,38 @@ nav {
   left: 0;
   right: 0;
 }
+
+section.Service p{
+  color:white;
+  font-size: 21px;
+  padding-left: 240px;
+  padding-right: 240px;
+ 
+}
+
+
+
+
 /* Mobile Of Nav, Header  */
 @media (max-width: 600px) {
+  section.hero p {
+    color: white;
+    font-size: 19px;
+    text-align: center;
+    width: 80%;
+}
+
+
+  section.Service p{
+    color:white;
+    font-size: 21px;
+    padding-left: 0px;
+    padding-right: 0px;
+    
+  }
+
+
+
   .toggle {
       display: block;
   }
@@ -183,15 +213,18 @@ nav li{
     margin-left: 5rem;
     margin-right: 5rem;
     line-height: 4rem;
+    text-align: center;
     font-size: 3rem;
     width: 70%;
     border: #ed9339 solid 2px;
     padding: 1rem;
     border-radius: 2rem 2rem 2rem 0rem;
   }
-  .hero p{
-    display: none;
-  }
+
+  
+}
+@media (min-width:992px)
+{
 }
 .wedo {
   background-color: #040706;
@@ -213,13 +246,13 @@ nav li{
 
 @media (min-width: 601px){
   .wedo h1{
-    font-size: 6rem;
+    font-size: 10rem;
   }
   .wedo p{
     width: 50%;
   }
   .wedo p {
-    max-width: 80%; /* Prevents overly wide text */
+    max-width: 50%; /* Prevents overly wide text */
     margin: auto;
     border: 2px solid #ed9339;
     padding: 1rem;
@@ -279,7 +312,7 @@ nav li{
   }
   .whowe{
     background-color: #040706;
-    height: 80vh;
+    height: 50vh;
   }
 }
 
@@ -292,8 +325,9 @@ nav li{
       padding: 0;
   }
   .hero h1{
-    font-size: 5rem;
+    font-size: 2.2rem;
     padding-bottom: 0;
+    text-align: center;
     margin-bottom: 0;
   }
   .hero p{
@@ -301,6 +335,7 @@ nav li{
     color: white;
     padding-top: 0;
     margin-bottom: 0;
+    text-align: center;
   }
   .images img{
     width: 300px;
@@ -324,6 +359,8 @@ main{
 }
 .hero h1{
   color: #ed9339;
+  text-align: center;
+  font-size: 62px;
 }
 /* What We Do Section */
 .wedo h1{
@@ -337,10 +374,13 @@ main{
 }
 
 /* Who are we Section */
-.whowe{
-  background-color: #040706;
-  height: 40vh;
+@media (min-width: 600px){
+  .whowe{
+    background-color: #040706;
+    height: 60vh;
+  }
 }
+
 .whowe figure{
   display: flex;
   flex-direction: column;
@@ -376,15 +416,7 @@ main{
   border-radius: 1rem;
 }
 /* Contact Section */
-.contact{
-  padding-right: 10%;
-  padding-left: 10%;
-  padding-top: 5%;
-  color: white;
-  background-color: #040706;
-  height: 40vh;
-  text-align: center;
-}
+
 form{
 padding-top: 2rem;
 padding-bottom: 0;
@@ -394,7 +426,7 @@ form label {
   display: inline-block;
 }
 .contact h1{
-  font-size: 2rem;
+  font-size: 4rem;
   text-decoration: underline;
   margin: 0;
 }
@@ -425,9 +457,36 @@ footer{
   width: 100%;
   margin: auto;
 }
-@media (max: width 992px;) {
+@media(min-width: 992px){
+  .contact{
+    padding-right: 10%;
+    padding-left: 10%;
+    padding-top: 0%;
+    padding-bottom: 5%;
+    color: white;
+    background-color: #040706;
+    height: 40vh;
+    text-align: center;
+  }
+
+ 
+
+  
+}
+@media (max-width: 992px) {
   .Connect{
     flex-direction: column;
+    
+  }
+  .contact{
+    padding-right: 10%;
+    padding-left: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    color: white;
+    background-color: #040706;
+    height: 40vh;
+    text-align: center;
   }
   iframe{
     width: 100%;
@@ -435,7 +494,53 @@ footer{
     filter: invert(100%);
   }
 }
+@media (min-width:1200px){
+  .contact{
+    padding-right: 10%;
+    padding-left: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    color: white;
+    background-color: #040706;
+    height: 40vh;
+    text-align: center;
+  }
+}
+@media (min-width:1200px)
+{
+  .Footerstyle ul{
+    display: flex;
+    text-align: center;
+    width: 80px;
+    font-weight: 500;
+    padding-left: 0;
+    color: white;
+    gap: 1rem;
+  } 
+  .Footerstyle li{
+    list-style: none;
+    list-style: none;
+    padding: 1rem;
+    font-size: 1.4rem;
+    background-color: #87501a;
+    border-radius: 1rem;
+  }
+
+  }
 @media (max-width: 1200px){
+  .contact{
+    padding-right: 10%;
+    padding-left: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    color: white;
+    background-color: #040706;
+    height: 40vh;
+    text-align: center;
+  }
+  .Connect{
+    height: 59vh;
+  }
   .Footerstyle li{
     list-style: none;
     list-style: none;
@@ -461,11 +566,14 @@ footer img {
   }
   .Map{
     background-color: #040706;
+    padding-top: 39px;
+  
   }
-  iframe{
-    width: 100%;
-    height: 20%;
-    filter: invert(100%);
+ 
+  .hero h1 {
+    color: #ed9339;
+    text-align: center;
+    font-size: 26px;
   }
   .Footerstyle li{
     list-style: none;
@@ -484,15 +592,25 @@ footer img {
     color: white;
     gap: 1rem;
   } 
+  .links{
+  padding-top: 46px;
+  }
 }
 .Fleximage{
   width: 100rem;
-  margin: center;
+  margin: auto;
 }
 .imagespart{
   background-color: #040706;
+  padding-top: 84px;
 }
 @media(min-width: 992px){
+  iframe{
+    width: 100%;
+    height: 40rem;
+    width: 30rem;
+    filter: invert(100%);
+  }
 .Connect{
   display: flex;
   justify-content: center;
@@ -518,20 +636,18 @@ footer img {
 
   .Connect{
     margin: 0;
-    padding: 0;
+    padding-top: 0px;
+    padding-bottom: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
   .Map{
     background-color: #040706;
+    padding-top: 29px;
   }
-  iframe{
-    width: 100%;
-    height: 30rem;
-    filter: invert(100%);
-  }
+ 
 }
-@media (min-width: 1200px){
 
-}
 a{
   text-decoration: none;
   color: white;
@@ -597,7 +713,8 @@ thead{
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 90vh;
+ 
+  
 }
 @media (max-width: 600px){
   .Service img{
