--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ nav ul {
 }
 
 nav {
-  display: none; /* Initially hide the navigation */
+  display: none; 
   flex-direction: column;
   background-color: #040706;
   position: absolute;
@@ -150,34 +150,14 @@ nav {
   right: 0;
 }
 
-section.Service p{
-  color:white;
-  font-size: 21px;
-  padding-left: 240px;
-  padding-right: 240px;
- 
-}
 
 
 
 
 /* Mobile Of Nav, Header  */
 @media (max-width: 600px) {
-  section.hero p {
-    color: white;
-    font-size: 19px;
-    text-align: center;
-    width: 80%;
-}
+  
 
-
-  section.Service p{
-    color:white;
-    font-size: 21px;
-    padding-left: 0px;
-    padding-right: 0px;
-    
-  }
 
 
 
@@ -186,7 +166,7 @@ section.Service p{
   }
 
   nav.show-items {
-      display: flex; /* Show the navigation when toggle is active */
+      display: flex; 
       color: #ffffff;
       font-weight: 100;
       background-color: #ed9339;
@@ -208,177 +188,150 @@ nav li{
     
   }
   
-  .hero h1{
-    margin-top: 8rem;
-    margin-left: 5rem;
-    margin-right: 5rem;
-    line-height: 4rem;
-    text-align: center;
-    font-size: 3rem;
-    width: 70%;
-    border: #ed9339 solid 2px;
-    padding: 1rem;
-    border-radius: 2rem 2rem 2rem 0rem;
-  }
+ 
 
   
 }
-@media (min-width:992px)
-{
-}
-.wedo {
-  background-color: #040706;
-  color: #ffffff;
-  min-height: 50vh; /* Ensures it takes space even if content is minimal */
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* Centers content vertically */
-  align-items: center; /* Centers content horizontally */
-  text-align: center;
-  padding: 2rem; /* Adds padding for spacing */
-  box-sizing: border-box;
-}
 
-.wedo h1 {
+/* hero section  new*/
+
+section.hero p {
+  color: white;
+  font-size: 2rem;
+  text-align: center;
+  width: 80%;
+}
+.hero h1{
+  margin-top: 8rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  line-height: 4rem;
+  text-align: center;
+  font-size: 3rem;
+  width: 70%;
+  border: #ed9339 solid 2px;
+  padding: 1rem;
+  border-radius: 2rem 2rem 2rem 0rem;
   color: #ed9339;
 }
-
-
-@media (min-width: 601px){
-  .wedo h1{
-    font-size: 10rem;
-  }
-  .wedo p{
-    width: 50%;
-  }
-  .wedo p {
-    max-width: 50%; /* Prevents overly wide text */
-    margin: auto;
-    border: 2px solid #ed9339;
-    padding: 1rem;
-    border-radius: 0rem 2rem 2rem 2rem;
-    font-size: 1.6rem; /* Ensures readability on smaller screens */
-    line-height: 2.4rem;
-  }
-  .whowe{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-  }
-  .whowe p{
-    width: 35%;
-    font-size: 1.4rem;
-    padding: 0;
-    margin-right: 0;
-    color: #ffffff;
- 
-  }
-
-}
-  
-@media (max-width: 600px) {
-  .wedo {
-    min-height: 30vh; /* Adjusts height for smaller screens */
-    padding: 1rem;
-  }
-  
-  .wedo h1 {
-    font-size: 3rem; /* Scales down header size */
-    margin-bottom: 1rem;
-  }
-
-  .wedo p {
-    font-size: 1.4rem; /* Scales down paragraph size */
-    line-height: 2rem;
-  }
-  .wedo p {
-    max-width: 80%; /* Prevents overly wide text */
-    margin: auto;
-    border: 2px solid #ed9339;
-    padding: 1rem;
-    border-radius: 0rem 2rem 2rem 2rem;
-    font-size: 1.6rem; /* Ensures readability on smaller screens */
-    line-height: 2.4rem;
-  }
-  .whowe p{
-    color: #ffffff;
-    margin-right: 4rem;
-    margin-left: 4rem;
-    font-size: 1.2rem;
-  }
-  .images img{
-    width: 150px;
-  }
-  .whowe{
-    background-color: #040706;
-    height: 50vh;
-  }
-}
-
-@media (min-width: 601px) {
-  nav {
-      display: flex; /* Default for larger screens */
-      flex-direction: row;
-      position: static;
-      background-color: transparent;
-      padding: 0;
-  }
-  .hero h1{
-    font-size: 2.2rem;
-    padding-bottom: 0;
-    text-align: center;
-    margin-bottom: 0;
-  }
-  .hero p{
-    font-size: 3rem;
-    color: white;
-    padding-top: 0;
-    margin-bottom: 0;
-    text-align: center;
-  }
-  .images img{
-    width: 300px;
-  }
-}
-/* Hero section */
-main{
-  margin: 0;
-  padding: 0;
-}
 .hero{
-  background: url(Images/brisket.jpg);
   background-size: cover;
+    background: url(Images/brisket.jpg);
   background-repeat: no-repeat;
   background-position: center;
-  height: 100vh;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
   align-content: center;
   align-items: center;
 }
-.hero h1{
-  color: #ed9339;
-  text-align: center;
-  font-size: 62px;
-}
-/* What We Do Section */
-.wedo h1{
-  margin: 0;
-  padding: 0;
-}
-.wedo p{
-  margin: 0;
-  padding: 1rem;
-  margin-top: 1rem;
+
+
+
+@media (min-width: 1200px){
+
+
+
+  .hero h1{
+    color: #ed9339;
+    text-align: center;
+    font-size: 9rem;
+    line-height: 1.5;
+  }
+  .hero{
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding-top: 20rem;
+    padding-bottom: 20rem;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+  }
+
+  section.hero p {
+    color: white;
+    font-size: 4rem;
+    text-align: center;
+    width: 80%;
 }
 
-/* Who are we Section */
-@media (min-width: 600px){
-  .whowe{
-    background-color: #040706;
-    height: 60vh;
+}
+
+/* wedo section new  */
+
+
+.wedo {
+  background-color: #040706;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;
+  text-align: center;
+  padding: 1rem; 
+  box-sizing: border-box;
+}
+
+.wedo h1 {
+  font-size: 3rem; 
+  margin-bottom: 1rem;
+  color: #ed9339;
+}
+
+.wedo p {
+  max-width: 80%;
+  margin: auto;
+  border: 2px solid #ed9339;
+  padding: 1rem;
+  border-radius: 0rem 2rem 2rem 2rem;
+  font-size: 1.6rem;
+  line-height: 2.4rem;
+  color: white;
+}
+
+@media (min-width: 1200px){
+
+  .wedo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    padding: 2rem; 
   }
+  
+  .wedo h1{
+    margin: 0;
+    padding: 0;
+  font-size: 8rem;
+
+
+  }
+  .wedo p{
+      max-width: 50%;
+      margin: auto;
+      font-size: 1.6rem;
+  }
+  
+
+}
+
+
+/*  whowe section new  */
+
+
+.whowe p{
+  color: #ffffff;
+  margin-right: 4rem;
+  margin-left: 4rem;
+  font-size: 1.2rem;
+  padding: 0;
+}
+
+.whowe{
+  background-color: #040706;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 .whowe figure{
@@ -400,53 +353,160 @@ main{
   padding-top: 5rem;
 }
 
-/* images Section */
+
+@media (min-width: 1200px){
+
+
+  .whowe{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  .whowe p{
+    width: 35%;
+    font-size: 1.4rem;
+    padding: 0;
+    margin-right: 0;
+    color: #ffffff;
+ 
+  }
+
+.whowe figure{
+  display: flex;
+  flex-direction: column;
+ align-items: center;
+ font-size: 2rem;
+ padding: 0;
+ margin: 0;
+}
+.whowe figcaption{
+  font-weight: 600;
+  color: #ed9339;
+}
+.whowe img{
+  width: 200px;
+  margin: 0;
+  padding: 0;
+  padding-top: 5rem;
+}
+}
+
+
+
+/*  imagespart section new  */
+
+
+
+.imagespart{
+  background-color: #040706;
+  padding-top: 84px;
+  margin-top: -3rem;
+}
+
+.images img{
+  width: 150px;
+    border-bottom: #ed9339 solid 3px;
+    border-right: #ed9339 solid 3px;
+    border-radius: 1rem;
+
+}
+
 .images{
   background-color: #040706;
+
+  margin-left: 10%;
+  margin-right: 10%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
-  padding-bottom: 2rem;
-  padding-top: 1rem;
 }
-.images img{
-  border-bottom: #ed9339 solid 3px;
-  border-right:  #ed9339 solid 3px;
-  border-radius: 1rem;
+
+
+@media (min-width: 1200px){
+
+
+  .images img{
+    width: 300px;
+  }
+
+
 }
-/* Contact Section */
+
+
+/*  connect  section new  */
+.Connect{
+  height: 94vh;
+}
+
+.Connect{
+  display: flex;
+  flex-direction: column;
+  
+}
+
+
+
+
+@media (min-width: 1200px){
+  .Connect{
+  display: flex;
+  flex-direction: row;
+height: 59vh;
+  }
+}
+
+
+
+
+
+
+
+/* form section */
+
+
+@media (min-width: 1200px){
 
 form{
-padding-top: 2rem;
-padding-bottom: 0;
+  padding-top: 2rem;
+  padding-bottom: 0;
+  }
+  form label {
+    padding: 12px 12px 12px 12px;
+    display: inline-block;
+  }
+  .contact h1{
+    font-size: 4rem;
+    text-decoration: underline;
+    margin: 0;
+  }
+  .name, .email{
+    font-size: 1.5rem;
+  }
+  .submit{
+    background-color: #ed9339;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  #subject{
+    margin-left: 0;
+  }
+
+
 }
-form label {
-  padding: 12px 12px 12px 12px;
-  display: inline-block;
-}
-.contact h1{
-  font-size: 4rem;
-  text-decoration: underline;
-  margin: 0;
-}
-.name, .email{
-  font-size: 1.5rem;
-}
-.submit{
-  background-color: #ed9339;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-#subject{
-  margin-left: 0;
-}
-footer{
-  background-color: #ed9339;
-}
+
+
+
+
+
+
+/* footer new */
+
+
 
 footer h1{
   font-size: 1.2rem;
@@ -456,198 +516,45 @@ footer h1{
 footer{
   width: 100%;
   margin: auto;
-}
-@media(min-width: 992px){
-  .contact{
-    padding-right: 10%;
-    padding-left: 10%;
-    padding-top: 0%;
-    padding-bottom: 5%;
-    color: white;
-    background-color: #040706;
-    height: 40vh;
-    text-align: center;
-  }
+  background-color: #ed9339;
 
- 
+}
+.Footerstyle li{
+  list-style: none;
 
-  
+  padding: 1rem;
+  font-size: 1.4rem;
+  background-color: #87501a;
+  border-radius: 1rem;
+  width: 80px;
 }
-@media (max-width: 992px) {
-  .Connect{
-    flex-direction: column;
-    
-  }
-  .contact{
-    padding-right: 10%;
-    padding-left: 10%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    color: white;
-    background-color: #040706;
-    height: 40vh;
-    text-align: center;
-  }
-  iframe{
-    width: 100%;
-    height: 20%;
-    filter: invert(100%);
-  }
-}
-@media (min-width:1200px){
-  .contact{
-    padding-right: 10%;
-    padding-left: 0%;
-    padding-top: 0%;
-    padding-bottom: 0%;
-    color: white;
-    background-color: #040706;
-    height: 40vh;
-    text-align: center;
-  }
-}
-@media (min-width:1200px)
-{
-  .Footerstyle ul{
-    display: flex;
-    text-align: center;
-    width: 80px;
-    font-weight: 500;
-    padding-left: 0;
-    color: white;
-    gap: 1rem;
-  } 
-  .Footerstyle li{
-    list-style: none;
-    list-style: none;
-    padding: 1rem;
-    font-size: 1.4rem;
-    background-color: #87501a;
-    border-radius: 1rem;
-  }
 
-  }
-@media (max-width: 1200px){
-  .contact{
-    padding-right: 10%;
-    padding-left: 0%;
-    padding-top: 0%;
-    padding-bottom: 0%;
-    color: white;
-    background-color: #040706;
-    height: 40vh;
-    text-align: center;
-  }
-  .Connect{
-    height: 59vh;
-  }
-  .Footerstyle li{
-    list-style: none;
-    list-style: none;
-    padding: 1rem;
-    font-size: 1.4rem;
-    background-color: #87501a;
-    border-radius: 1rem;
-  }
+
+footer img {
+  width: 20px;
+  padding: 0rem 2rem 0rem 2rem;
+}
+.Map{
+  background-color: #040706;
+  padding-top: 39px;
+
+}
+
+
 .Footerstyle ul{
   display: flex;
+  flex-direction: column;
   text-align: center;
   width: 80px;
   font-weight: 500;
   padding-left: 0;
+
   color: white;
   gap: 1rem;
 } 
+.links{
+padding-top: 46px;
 }
-@media (max-width: 600px) {
-footer img {
-    width: 20px;
-    padding: 0rem 2rem 0rem 2rem;
-  }
-  .Map{
-    background-color: #040706;
-    padding-top: 39px;
-  
-  }
- 
-  .hero h1 {
-    color: #ed9339;
-    text-align: center;
-    font-size: 26px;
-  }
-  .Footerstyle li{
-    list-style: none;
-    width: 80px;
-    background-color: #87501a;
-    border-radius: 1rem;
-  }
-  .Footerstyle ul{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 80px;
-    font-weight: 500;
-    padding-left: 0;
-
-    color: white;
-    gap: 1rem;
-  } 
-  .links{
-  padding-top: 46px;
-  }
-}
-.Fleximage{
-  width: 100rem;
-  margin: auto;
-}
-.imagespart{
-  background-color: #040706;
-  padding-top: 84px;
-}
-@media(min-width: 992px){
-  iframe{
-    width: 100%;
-    height: 40rem;
-    width: 30rem;
-    filter: invert(100%);
-  }
-.Connect{
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  align-items: center;
-  background-color: #040706;
-  margin-right: 0;
-}
-.contact{
-  margin-right: 10rem;
-}
-
-}
-@media (min-width: 601px){
-  .images{
-    margin-left: 10%;
-    margin-right: 10%;
-  }
-  footer img {
-    width: 20px;
-    padding: 0rem 2rem 0rem 2rem;
-  }
-
-  .Connect{
-    margin: 0;
-    padding-top: 0px;
-    padding-bottom: 20px;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .Map{
-    background-color: #040706;
-    padding-top: 29px;
-  }
- 
-}
-
 a{
   text-decoration: none;
   color: white;
@@ -667,6 +574,191 @@ footer p{
   padding-top: 2rem;
   margin: 0;
 }
+
+
+
+
+@media (min-width: 1200px){
+
+
+  
+  .Footerstyle ul{
+    flex-direction: row;
+  } 
+ 
+ 
+  .Connect{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    background-color: #040706;
+    margin-right: 0;
+  }
+
+}
+
+
+
+/* video section */
+
+
+section.video {
+  
+  text-align: center;
+  margin: 0 auto;
+  background: #040706;
+  padding: 5rem;
+}
+
+.video iframe {
+  width: 100%; /* Full width on mobile */
+  height: auto;
+}
+
+/* map */
+
+
+
+.Map iframe {
+  width: 100%; /* Full width on mobile */
+  height: 100%; /* Maintain proportional height */
+  margin: 0 auto;
+}
+
+
+
+@media (min-width: 1200px){
+  section.map  iframe {
+    width: 100%;
+    height:100%;
+    filter: invert(100%);
+  }
+  .video iframe {
+    width: 54%;
+    height: 69vh;
+}
+
+}
+
+
+
+
+  
+
+
+@media (min-width: 601px) {
+  nav {
+      display: flex; /* Default for larger screens */
+      flex-direction: row;
+      position: static;
+      background-color: transparent;
+      padding: 0;
+  }
+
+}
+
+/* Contact Section */
+
+
+@media(min-width: 992px){
+  .contact{
+    padding-right: 10%;
+    padding-left: 10%;
+    padding-top: 0%;
+    padding-bottom: 5%;
+    color: white;
+    background-color: #040706;
+    height: 40vh;
+    text-align: center;
+  } 
+}
+@media (max-width: 992px) {
+ 
+  .contact{
+    padding-right: 10%;
+    padding-left: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    color: white;
+    background-color: #040706;
+    height: 40vh;
+    text-align: center;
+  }
+
+}
+@media (min-width:1200px){
+  .contact{
+    padding-right: 10%;
+    padding-left: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    color: white;
+    background-color: #040706;
+    height: 40vh;
+    text-align: center;
+  }
+}
+
+@media (max-width: 1200px){
+  .contact{
+    padding-right: 10%;
+    padding-left: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    color: white;
+    background-color: #040706;
+    height: 40vh;
+    text-align: center;
+  }
+  
+
+}
+
+.Fleximage{
+  width: 100rem;
+  margin: auto;
+}
+
+@media(min-width: 992px){
+ 
+.Connect{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  background-color: #040706;
+  margin-right: 0;
+}
+.contact{
+  margin-right: 10rem;
+}
+
+}
+@media (min-width: 601px){
+ 
+  footer img {
+    width: 20px;
+    padding: 0rem 2rem 0rem 2rem;
+  }
+
+  .Connect{
+    margin: 0;
+    padding-top: 0px;
+    padding-bottom: 20px;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .Map{
+    background-color: #040706;
+    padding-top: 29px;
+  }
+ 
+}
+
+
+
+
 /* ---------------------Menu Page------------------------ */
 .table{
   width: 100%;
@@ -699,13 +791,49 @@ footer p{
 thead{
   font-size: 2rem;
 }
+
+
+.heromenu{
+  background-image: url(Images/brisket2.jpg);
+  background-size: cover;
+  min-height: 35vh;
+  margin-top: -3rem;
+}
+.heromenu h1{
+  font-size: 3rem;
+  text-align: center;
+  color: #ea9146;
+  padding-top: 7rem;
+}
+.heromenu u {
+  font-size: 2rem;
+}
+
+@media (min-width:1200px) {
+  .heromenu u {
+    font-size: 5rem;
+  }
+  .heromenu h1{
+    padding-top: 12rem;
+    font-size: 7rem;
+   
+  }
+  .heromenu{
+    margin-top: -7rem;
+  }
+}
+
+
+
+
+
 /* --------------------Services------------------- */
 .Service h1{
   text-align: center;
   font-size: 5rem;
   color: #ed9339;
   line-height: 5rem;
-  padding: 0;
+  padding-top: 5rem;
   margin: 0;
 }
 .Service{
@@ -713,22 +841,107 @@ thead{
   display: flex;
   flex-direction: column;
   align-items: center;
- 
-  
 }
-@media (max-width: 600px){
+.heroservice h1{ 
+  font-size: 4rem;
+color:#ed9339;
+padding-top: 8rem;
+text-align: center;
+}
+.heroservice{
+  background-image: url(Images/brisket3.jpg);
+  background-size: cover;
+min-height: 50vh;
+margin-top: -4rem;
+}
+
+.Service img{
+  width: 80%;
+  margin-top: 5rem;
+}
+.Service p{
+  font-size: 1rem;
+  color: white;
+  width: 80%;
+}
+
+
+@media(min-width:1200px){
+  .heroservice h1{
+font-size: 7rem;
+padding-top: 8rem;
+
+
+  }.heroservice{
+    margin-top:-6rem;
+  }
   .Service img{
-    width: 80%;
-    margin-top: 5rem;
+    width: 38%;
   }
   .Service p{
-    font-size: 1.4rem;
+    font-size: 2.5rem;
     color: white;
     width: 80%;
   }
-  .Service h1{
-    font-size: 3.5rem;
-    margin-top: 2rem;
+ 
+}
+
+
+
+
+
+
+
+
+/* General styles for all devices */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+}
+
+.floating-phone {
+  position: fixed;
+  bottom: 10px; /* Adjusts position from bottom */
+  right: 10px; /* Adjusts position from right */
+  background-color: #ed9339;
+  color: white;
+  width: 50px; /* Adjust button width */
+  padding: 10px;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 9999;
+}
+
+/* Vertical text for mobile devices */
+.floating-phone a {
+  writing-mode: vertical-rl; /* Text flows vertically */
+  color: white;
+  text-decoration: none;
+  font-size: 16px;
+}
+
+/* Hover effect */
+.floating-phone:hover {
+  background-color: #ed9339;
+}
+
+/* Media query for mobile devices (max-width: 768px) */
+@media screen and (max-width: 768px) {
+  .floating-phone {
+    right: 5px;
+    bottom: 5px;
+    width: 40px; /* Smaller button on mobile */
   }
+
+  .floating-phone a {
+    font-size: 14px;
   }
+}
+
+
+
+
+
 
